--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "enhancer-for-tdd",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -14,7 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "jquery": "^3.7.1",
-    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.26.2",
     "toastr": "^2.1.4"
   },
   "devDependencies": {
